Fixed sizing on mobile

--- a/v3/static/css/style.css
+++ b/v3/static/css/style.css
@@ -14,12 +14,13 @@
     box-shadow: 0 0px 1px 0 rgba(0, 0, 0, 0.16), 0 0px 10px 0 #00000096;
     z-index: 999999;
     font-family: Arial, Helvetica, sans-serif;
+    flex-direction: column;
   }
 
   #chatwidget .chat_header {
     background: #1976d2;
     border-radius: 10px 10px 0px 0px;
-    padding: 5px 5px 47px 5px;
+    padding: 5px 5px 5px 5px;
     font-size: 20px;
   }
 
@@ -69,7 +70,7 @@
   }
 
   #chatwidget {
-    font-family: Arial, Helvetica, sans-serif;
+    /* font-family: Arial, Helvetica, sans-serif;
     display: none;
     width: 100%;
     right: 0px;
@@ -78,21 +79,39 @@
     position: fixed;
     background: #fff;
     border-radius: 0px;
+    box-shadow: 0 0px 1px 0 rgba(0, 0, 0, 0.16), 0 0px 10px 0 #00000096; */
+    /*outline: 0px; */
+    /* z-index: 999999; */
+
+    /* -------------------- */
+
+    font-family: Arial, Helvetica, sans-serif;
+    display: none;
+    background: #fff;
     box-shadow: 0 0px 1px 0 rgba(0, 0, 0, 0.16), 0 0px 10px 0 #00000096;
-    /*outline: 0px;*/
     z-index: 999999;
+
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+
+    /* have to changed this remove important */
+    /* display: flex ;*/
+    flex-direction: column;
   }
 
   #chatwidget .chat_header {
     background: #1976d2;
     border-radius: 0px;
-    padding: 5px 5px 47px 5px;
     font-size: 20px;
+    height: 5%;
+    padding: 10px 0;
   }
 
   #chatwidget .chats {
-    clear: both;
-    height: 74vh;
+    height: 90%;
     padding: 10px 2px 2px 2px;
     border-radius: 1px;
     overflow-y: scroll;
@@ -101,12 +120,11 @@
   }
 
   #chatwidget #chat-footer {
+    height: 5%;
     padding-top: 12.5px;
     padding-bottom: 12.5px;
     border-top: 1px solid #ccc;
     background: #fff;
-    position: fixed;
-    bottom: 0;
     width: 100%;
   }
 
